--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 sudo: false
 language: node_js
 node_js:
-  - "0.8"
+  # - "0.8"
   - "0.10"
   - "0.12"
-  - "iojs"
+  # - "iojs"
 before_install:
   - npm install -g npm
 matrix:
